CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(detours_samples LANGUAGES C CXX)

ADD_SUBDIRECTORY("comeasy")
ADD_SUBDIRECTORY("commem")
# ADD_SUBDIRECTORY("cping")
# ADD_SUBDIRECTORY("disas")
# ADD_SUBDIRECTORY("dtest")
# ADD_SUBDIRECTORY("dumpe")
# ADD_SUBDIRECTORY("dumpi")
# ADD_SUBDIRECTORY("echo")
# ADD_SUBDIRECTORY("einst")
# ADD_SUBDIRECTORY("excep")
# ADD_SUBDIRECTORY("findfunc")
# ADD_SUBDIRECTORY("impmunge")
# ADD_SUBDIRECTORY("member")
# ADD_SUBDIRECTORY("opengl")
ADD_SUBDIRECTORY("region")
ADD_SUBDIRECTORY("setdll")
ADD_SUBDIRECTORY("simple")
# ADD_SUBDIRECTORY("slept")
ADD_SUBDIRECTORY("syelog")
# ADD_SUBDIRECTORY("talloc")
ADD_SUBDIRECTORY("traceapi")
ADD_SUBDIRECTORY("tracebld")
ADD_SUBDIRECTORY("tracelnk")
ADD_SUBDIRECTORY("tracemem")
ADD_SUBDIRECTORY("tracereg")
ADD_SUBDIRECTORY("traceser")
ADD_SUBDIRECTORY("tracessl")
ADD_SUBDIRECTORY("tracetcp")
# ADD_SUBDIRECTORY("tryman")
ADD_SUBDIRECTORY("withdll")