CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(libdetours LANGUAGES C CXX)

FILE(GLOB detours_src
	${CMAKE_CURRENT_LIST_DIR}/creatwth.cpp
	${CMAKE_CURRENT_LIST_DIR}/detours.cpp
	${CMAKE_CURRENT_LIST_DIR}/disasm.cpp
	${CMAKE_CURRENT_LIST_DIR}/disolarm.cpp
	${CMAKE_CURRENT_LIST_DIR}/disolarm64.cpp
	${CMAKE_CURRENT_LIST_DIR}/disolia64.cpp
	${CMAKE_CURRENT_LIST_DIR}/disolx64.cpp
	${CMAKE_CURRENT_LIST_DIR}/disolx86.cpp
	${CMAKE_CURRENT_LIST_DIR}/image.cpp
	${CMAKE_CURRENT_LIST_DIR}/modules.cpp
)

ADD_LIBRARY(detours_static STATIC ${detours_src})

TARGET_COMPILE_DEFINITIONS(detours_static PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(detours_static PUBLIC ${DETOURS_COMPILE_OPTIONS})