CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(commem LANGUAGES C CXX)

FILE(GLOB src
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
)

ADD_EXECUTABLE(commem ${src})
TARGET_LINK_LIBRARIES(commem PUBLIC detours_static)

TARGET_COMPILE_DEFINITIONS(commem PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(commem PUBLIC ${DETOURS_COMPILE_OPTIONS})