CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(cping LANGUAGES C CXX)

# TODO: Is there any smart way to find Win32 Standard Libraries?
# It is Visual C++ Compiler only way.
# For MinGW or Clang based compilers, it should not work.
SET(CMAKE_CXX_STANDARD_LIBRARIES
    "${CMAKE_CXX_STANDARD_LIBRARIES} user32.lib shell32.lib uuid.lib ole32.lib rpcrt4.lib advapi32.lib wsock32.lib")

LIST(APPEND DETOURS_COMPILE_DEFINITIONS CONST_VTABLE)
LIST(APPEND DETOURS_COMPILE_DEFINITIONS COBJMACROS)
LIST(APPEND DETOURS_COMPILE_DEFINITIONS WIN32)
LIST(APPEND DETOURS_COMPILE_DEFINITIONS NT)

ADD_EXECUTABLE(cping "cping.cpp")
TARGET_LINK_LIBRARIES(cping PUBLIC detours_static)

TARGET_COMPILE_DEFINITIONS(cping PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(cping PUBLIC ${DETOURS_COMPILE_OPTIONS})