CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(disas LANGUAGES C CXX)

FILE(GLOB src
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
	${CMAKE_CURRENT_LIST_DIR}/*.rc
)

ADD_EXECUTABLE(disas ${src})
TARGET_LINK_LIBRARIES(disas PUBLIC detours_static)

TARGET_COMPILE_DEFINITIONS(disas PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(disas PUBLIC ${DETOURS_COMPILE_OPTIONS})