CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(comeasy LANGUAGES C CXX)

FILE(GLOB src
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
	${CMAKE_CURRENT_LIST_DIR}/*.rc
)

ADD_EXECUTABLE(comeasy ${src})
TARGET_LINK_LIBRARIES(comeasy PUBLIC detours_static)

TARGET_COMPILE_DEFINITIONS(comeasy PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(comeasy PUBLIC ${DETOURS_COMPILE_OPTIONS})