CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(region LANGUAGES C CXX)

FILE(GLOB src
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
)

ADD_EXECUTABLE(region ${src})
TARGET_LINK_LIBRARIES(region PUBLIC detours_static)

TARGET_COMPILE_DEFINITIONS(region PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(region PUBLIC ${DETOURS_COMPILE_OPTIONS})