CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(setdll LANGUAGES C CXX)

FILE(GLOB src
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
)

ADD_EXECUTABLE(setdll ${src})
TARGET_LINK_LIBRARIES(setdll PUBLIC detours_static)

TARGET_COMPILE_DEFINITIONS(setdll PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(setdll PUBLIC ${DETOURS_COMPILE_OPTIONS})