CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(syelog LANGUAGES C CXX)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_LIST_DIR}")

ADD_LIBRARY(syelog STATIC "syelog.cpp")
TARGET_COMPILE_DEFINITIONS(syelog PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(syelog PUBLIC ${DETOURS_COMPILE_OPTIONS})

ADD_EXECUTABLE(sltest "sltest.cpp")
TARGET_LINK_LIBRARIES(sltest PUBLIC detours_static)
TARGET_LINK_LIBRARIES(sltest PUBLIC syelog)
TARGET_COMPILE_DEFINITIONS(sltest PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(sltest PUBLIC ${DETOURS_COMPILE_OPTIONS})

ADD_EXECUTABLE(syelogd "syelogd.cpp")
TARGET_LINK_LIBRARIES(syelogd PUBLIC syelog)
TARGET_COMPILE_DEFINITIONS(syelogd PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(syelogd PUBLIC ${DETOURS_COMPILE_OPTIONS})

ADD_EXECUTABLE(sltestp "sltestp.cpp")
TARGET_LINK_LIBRARIES(sltestp PUBLIC syelog)
TARGET_COMPILE_DEFINITIONS(sltestp PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(sltestp PUBLIC ${DETOURS_COMPILE_OPTIONS})