CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(tracelnk LANGUAGES C CXX)

SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_LIST_DIR}/../syelog")

FILE(GLOB src
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
	${CMAKE_CURRENT_LIST_DIR}/*.rc
)

ADD_LIBRARY(tracelnk SHARED ${src})
TARGET_LINK_LIBRARIES(tracelnk PUBLIC detours_static)
TARGET_LINK_LIBRARIES(tracelnk PUBLIC syelog)

TARGET_COMPILE_DEFINITIONS(tracelnk PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(tracelnk PUBLIC ${DETOURS_COMPILE_OPTIONS})