CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(tracetcp LANGUAGES C CXX)

SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_LIST_DIR}/../syelog")

FILE(GLOB src
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
	${CMAKE_CURRENT_LIST_DIR}/*.rc
)

FIND_LIBRARY(WS2_32 ws2_32)

ADD_LIBRARY(tracetcp SHARED ${src})
TARGET_LINK_LIBRARIES(tracetcp PUBLIC detours_static)
TARGET_LINK_LIBRARIES(tracetcp PUBLIC syelog)
TARGET_LINK_LIBRARIES(tracetcp PUBLIC ws2_32)

TARGET_COMPILE_DEFINITIONS(tracetcp PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(tracetcp PUBLIC ${DETOURS_COMPILE_OPTIONS})