CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(withdll LANGUAGES C CXX)

FILE(GLOB src
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
)

ADD_EXECUTABLE(withdll ${src})
TARGET_LINK_LIBRARIES(withdll PUBLIC detours_static)

TARGET_COMPILE_DEFINITIONS(withdll PUBLIC ${DETOURS_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(withdll PUBLIC ${DETOURS_COMPILE_OPTIONS})